--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.17.1",
     "cloudinary": "^1.8.0",
     "cors": "^2.8.3",
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
     "multer": "^1.3.0",
     "multer-storage-cloudinary": "^2.2.1",
