--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
     "multer": "^1.3.0",
     "multer-storage-cloudinary": "^2.2.1",
     "pg": "^6.1.5"
